--- a/meetLink/templates/meetLink/contactos/contactos_create.html
+++ b/meetLink/templates/meetLink/contactos/contactos_create.html
@@ -21,11 +21,11 @@
                 <div class="form-group">
                     {{ form.as_p }}
                 </div>
-                <button type="submit" class="btn btn-success w-100">Guardar Contacto</button>
+                <button type="submit" class="btn btn-success w-100" alt="Guardar contacto">Guardar Contacto</button>
             </form>
 
             <p class="mt-3 text-center">
-                <a href="{% url 'contactos' %}">Volver a Contactos</a>
+                <a href="{% url 'contactos' %}" alt="Volver a contactos">← Volver a Contactos</a>
             </p>
         </div>
     </div>
