--- a/meetLink/templates/meetLink/contactos/contactos_grupo_update.html
+++ b/meetLink/templates/meetLink/contactos/contactos_grupo_update.html
@@ -10,10 +10,10 @@
                 <div class="form-group">
                     {{ form.as_p }}
                 </div>
-                <button type="submit" class="btn btn-success w-100">Guardar cambios</button>
+                <button type="submit" class="btn btn-success w-100" alt="Guardar cambios">Guardar cambios</button>
             </form>
             <p class="mt-3 text-center">
-                <a href="{% url 'contactos' %}">← Volver a grupos</a>
+                <a href="{% url 'contactos' %}" alt="Volver a grupos">← Volver a grupos</a>
             </p>
         </div>
     </div>
