--- a/meetLink/templates/meetLink/contactos/contactos_update.html
+++ b/meetLink/templates/meetLink/contactos/contactos_update.html
@@ -20,9 +20,9 @@
             <div class="form-group">
                 {{ form.as_p }}
             </div>
-            <button type="submit" class="btn btn-primary w-100">Guardar Cambios</button>
+            <button type="submit" class="btn btn-primary w-100" alt="Guardar cambios">Guardar Cambios</button>
         </form>
-        <p class="mt-3 text-center"><a href="{% url 'contactos' %}">Volver a la lista de contactos</a></p>
+        <p class="mt-3 text-center"><a href="{% url 'contactos' %}" alt="Volver a contactos">← Volver a la lista de contactos</a></p>
     </div>
 </div>
 
