--- a/meetLink/templates/meetLink/eventos/eventos_update.html
+++ b/meetLink/templates/meetLink/eventos/eventos_update.html
@@ -20,11 +20,11 @@
                 <div class="form-group">
                     {{ form.as_p }}
                 </div>
-                <button type="submit" class="btn btn-success w-100">Guardar Cambios</button>
+                <button type="submit" class="btn btn-success w-100" alt="Guardar cambios">Guardar Cambios</button>
             </form>
 
             <p class="mt-3 text-center">
-                <a href="{% url 'eventos' %}">Volver a Eventos</a>
+                <a href="{% url 'eventos' %}" alt="Volver a Eventos">← Volver a Eventos</a>
             </p>
         </div>
     </div>
