--- a/meetLink/templates/meetLink/contactos/contactos_grupo_create.html
+++ b/meetLink/templates/meetLink/contactos/contactos_grupo_create.html
@@ -11,9 +11,9 @@
                 <div class="form-group">
                     {{ form.as_p }}
                 </div>
-                <button type="submit" class="btn btn-success w-100">Crear Grupo</button>
+                <button type="submit" class="btn btn-success w-100" alt="Crear grupo">Crear Grupo</button>
             </form>
-            <p class="mt-3 text-center"><a href="{% url 'contactos' %}">Volver a Contactos</a></p>
+            <p class="mt-3 text-center"><a href="{% url 'contactos' %}" alt="Volver a Contactos">← Volver a Contactos</a></p>
         </div>
     </div>
 </div>
