--- a/meetLink/templates/meetLink/contactos/contactos_grupo_delete.html
+++ b/meetLink/templates/meetLink/contactos/contactos_grupo_delete.html
@@ -7,8 +7,8 @@
        <h2>¿Estás seguro de que quieres eliminar este grupo de contactos?</h2>
     <form method="post">
         {% csrf_token %}
-        <button type="submit" class="btn btn-danger">Eliminar</button>
-        <a href="{% url 'contactos' %}" class="btn btn-secondary">Cancelar</a>
+        <button type="submit" class="btn btn-danger" alt="Elimiar">Eliminar</button>
+        <a href="{% url 'contactos' %}" class="btn btn-secondary" alt="Cancelar">Cancelar</a>
     </form>
     </div>
 </div>
