--- a/meetLink/templates/meetLink/sesion/login.html
+++ b/meetLink/templates/meetLink/sesion/login.html
@@ -9,9 +9,9 @@
             <div class="form-group">
                 {{ form.as_p }}
             </div>
-            <button type="submit" class="btn btn-primary w-100">Iniciar Sesión</button>
+            <button type="submit" class="btn btn-primary w-100" alt="Iniciar sesión">Iniciar Sesión</button>
         </form>
-        <p class="mt-3 text-center">¿Aún no tienes cuenta con nosotros? <a href="{% url 'registro' %}">Regístrate</a></p>
+        <p class="mt-3 text-center">¿Aún no tienes cuenta con nosotros? <a href="{% url 'registro' %}" alt="Botón registro">Regístrate</a></p>
     </div>
 </div>
 {% endblock %}
