--- a/meetLink/templates/meetLink/sesion/logout.html
+++ b/meetLink/templates/meetLink/sesion/logout.html
@@ -6,7 +6,7 @@
         <h2 class="mb-4 text-center">Hasta pronto, {{ user.username }}</h2>
         <p class="text-center">Has cerrado sesión correctamente.</p>
         <div class="text-center">
-            <a href="{% url 'login' %}" class="btn btn-primary w-100 mb-2">Iniciar sesión de nuevo</a>
+            <a href="{% url 'login' %}" class="btn btn-primary w-100 mb-2" alt="botón Inicio de sesión">Iniciar sesión de nuevo</a>
         </div>
     </div>
 </div>
