--- a/meetLink/templates/meetLink/sesion/registration.html
+++ b/meetLink/templates/meetLink/sesion/registration.html
@@ -11,9 +11,9 @@
                 <div class="form-group">
                     {{ form.as_p }}
                 </div>
-                <button type="submit" class="btn btn-success w-100">Registrarse</button>
+                <button type="submit" class="btn btn-success w-100" alt="Botón registro">Registrarse</button>
             </form>
-            <p class="mt-3 text-center">¿Ya tienes cuenta? <a href="{% url 'login' %}">Inicia sesión</a></p>
+            <p class="mt-3 text-center">¿Ya tienes cuenta? <a href="{% url 'login' %}" alt="Botón iniciar sesión">Inicia sesión</a></p>
         </div>
     </div>
 </div>
