--- a/meetLink/templates/meetLink/eventos/eventos.html
+++ b/meetLink/templates/meetLink/eventos/eventos.html
@@ -68,8 +68,8 @@
                 <p class="text-center fst-italic mb-2" alt="Fecha del evento">{{ evento.fecha_inicio|date:"d/m/Y H:i" }}</p>
                 <p alt="Descripción del evento">{{ evento.descripcion }}</p>
                 <div class="d-flex justify-content-center gap-3 mt-2">
-                    <a href="{% url 'eventos_update' evento.id %}" class="btn btn-sm btn-primary" alt="Modificar evento">Modificar</a>
-                    <a href="{% url 'eventos_delete' evento.id %}" class="btn btn-sm btn-danger" alt="Elimiar evento">Eliminar</a>
+                    <a href="{% url 'eventos_update' evento.id %}" class="btn btn-sm btn-modificar" alt="Modificar evento">Modificar</a>
+                    <a href="{% url 'eventos_delete' evento.id %}" class="btn btn-sm btn-eliminar" alt="Elimiar evento">Eliminar</a>
                 </div>
             </div>
             {% empty %}
