--- a/meetLink/static/css/styles.css
+++ b/meetLink/static/css/styles.css
@@ -24,6 +24,10 @@
 
 /*********************************! GENERAL **********************************/
 
+*, *::before, *::after {
+    box-sizing: border-box;
+}
+
 html, body {
     height: 100%;
     margin: 0;
@@ -37,17 +41,47 @@ html, body {
 main {
     min-height: 100vh;
     margin-left: var(--sidebar-width);
-    padding-right: 300px;
-    display: block;
+    display: flex;
+    position: relative;
     align-items: center;
     align-content: center;
-    background-color: var(--amarillo);
+    justify-content: flex-start;
+    background-image: url(https://images.unsplash.com/photo-1610917615921-9b800769efe6?q=80&w=2940&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D);
+    background-size: cover;
+    overflow: hidden;
+    z-index: 0;
 }
-
 
 .collapsed~.main-content {
     margin-left: var(--sidebar-width-collapsed);
 }
+
+
+
+/*********************************! GLASSBOX - DIVS **********************************/
+
+.glass-box {
+    background: rgba(0, 0, 0, 0.8);
+    padding: 15px 20px;
+    margin: 10px;
+    border-radius: 15px;
+    backdrop-filter: blur(10px);
+    box-shadow: 0 4px 15px rgba(0, 0, 0, 0.25);
+    transition: transform 0.2s ease-in-out;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    color: var(--blanco);
+}
+
+.glass-box h5 {
+    color: var(--amarillo);
+}
+
+.glass-box p {
+    color: var(--blanco);
+}
+
 
 /*********************************! NAVBAR **********************************/
 
@@ -60,6 +94,7 @@ main {
     color: var(--blanco);
     justify-content: space-between;
     padding: 2rem 1rem;
+    z-index: 10;
 
 }
 
@@ -139,7 +174,7 @@ main {
 
 .logout-btn {
     background-color: var(--rojo);
-    color: white;
+    color: var(--negro);
     border: none;
     padding: 0.5rem 1rem;
     margin-bottom: 2rem;
@@ -198,41 +233,6 @@ main {
 }
 
 
-/*********************************! COLUMNA EVENTO **********************************/
-
-#columna-eventos{
-    background-color: var(--negro);
-    height: 100vh;
-    width: fit-content;
-    position: fixed;
-    right: 0;
-    top: 0;
-    padding: 2rem 1rem;
-    overflow-y: auto;
-}
-
-
-/*********************************? CARDS EVENTOS **********************************/
-.event-card {
-    background-color: var(--blanco);
-    border-left: 4px solid var(--aqua);
-    border-radius: 10px;
-    max-height: min-content;
-}
-
-.event-card h5 {
-    color: var(--rojo2);
-    margin-bottom: 0.3rem;
-}
-
-.event-card small {
-    color: var(--naranja);
-}
-
-.event-card p {
-    margin-bottom: 0.5rem;
-    font-size: 0.95rem;
-}
 
 /*********************************? BOTONES MODIFICAR/ELIMINAR **********************************/
 .btn-modificar {
@@ -249,16 +249,28 @@ main {
 
 .btn-eliminar {
     background-color: transparent;
-    border: 1px solid var(--rojo2);
-    color: var(--rojo2);
+    border: 1px solid var(--rojo);
+    color: var(--rojo);
     font-size: 0.85rem;
 }
 
 .btn-eliminar:hover {
-    background-color: var(--rojo2);
+    background-color: var(--rojo);
     color: var(--blanco);
 }
 
+
+/*? Botones EVENTOS/CONTACTOS - Crear */
+
+.btn-outline {
+    background-color: var(--negro);
+    color: var(--naranja);
+}
+
+.btn-outline:hover {
+    background-color: var(--negro);
+    color: var(--azul);
+}
 
 
 /*********************************? SCROLLBAR EVENTO **********************************/
@@ -283,20 +295,37 @@ main {
 }
 
 
+/*********************************! EVENTOS **********************************/
+
+#div-contenido {
+    flex: 1 1 600px;
+}
+
+
+#btn-nuevoEvento {
+    background-color: var(--negro);
+    color: var(--naranja);
+
+}
+
+#btn-nuevoEvento:hover {
+    color: var(--azul);
+}
+
 /*********************************! RESPONSIVE **********************************/
 
 /* Toggle button */
 .toggle-btn {
     position: absolute;
-    right: -15px;
-    top: 20px;
+    right: 10px;
+    top: 10px;
     background: white;
     border-radius: 50%;
     width: 30px;
     height: 30px;
     border: none;
     box-shadow: 0 2px 6px rgba(0, 0, 0, 0.15);
-    z-index: 300000;
+    z-index: 9999;
     cursor: pointer;
     transition: transform 0.3s ease;
 }
