CONTACTO - Cambios en la template para listar contactos

--- a/meetLink/templates/meetLink/contactos/contactos.html
+++ b/meetLink/templates/meetLink/contactos/contactos.html
@@ -72,7 +72,7 @@
                 </div>
             </div>
             {% empty %}
-            <p class="text-center text-white">No hay grupos de contactos disponibles.</p>
+            <p class="text-center text-black">Aún no hay grupos de contactos disponibles.</p>
             {% endfor %}
         </div>
 
