--- a/meetLink/templates/meetLink/inicio/index.html
+++ b/meetLink/templates/meetLink/inicio/index.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block contenido %}
-
+<!-- NAVBAR -->
 <nav id="navbar" class="sidebar d-flex flex-column flex-shrink-0 position-fixed">
     <button class="toggle-btn" onclick="toggleSidebar()" alt="Minimizar/ampliar menú">
         <i class="fas fa-chevron-left"></i>
@@ -13,8 +13,8 @@
     </div>
 
     <div id="contenido-navbar" class="d-flex flex-column">
-        <div class="p-4 text-center pb-3">
-            <h4 class="logo-text fw-bold mb-0" alt="Logo MeetLink">meetL!nk</h4>
+        <div class="p-4 text-center">
+            <h4 class="logo-text fw-bold mb-0">meetL!nk</h4>
         </div>
 
         <div class="user-info text-center mb-4">
