--- a/meetLink/templates/meetLink/eventos/eventos.html
+++ b/meetLink/templates/meetLink/eventos/eventos.html
@@ -72,7 +72,7 @@
                 </div>
             </div>
             {% empty %}
-            <p class="text-center text-white">No hay eventos disponibles.</p>
+            <p class="text-center text-black">Aún no hay eventos disponibles.</p>
             {% endfor %}
         </div>
 
