--- a/meetLink/static/css/styles.css
+++ b/meetLink/static/css/styles.css
@@ -312,6 +312,12 @@ main {
     color: var(--azul);
 }
 
+
+
+/*********************************! CONTACTOS **********************************/
+
+
+
 /*********************************! RESPONSIVE **********************************/
 
 /* Toggle button */
