--- a/meetLink/templates/meetLink/contactos/contactos_delete.html
+++ b/meetLink/templates/meetLink/contactos/contactos_delete.html
@@ -4,7 +4,7 @@
 
 <div id="form" class="d-flex align-items-center justify-content-center" style="background-color: #85D0B2;">
     <div id="form-card" class="p-5 bg-white rounded shadow">
-       <h2>¿Estás seguro de que quieres eliminar este contacto?</h2>
+       <h2>¿Estás seguro de que quieres eliminar este contacto? Se eliminará de todos los grupos actuales en los que esté presente.</h2>
     <form method="post">
         {% csrf_token %}
         <button type="submit" class="btn btn-danger" alt="Elimiar">Eliminar</button>
