--- a/meetLink/templates/meetLink/contactos/contactos_grupo_delete.html
+++ b/meetLink/templates/meetLink/contactos/contactos_grupo_delete.html
@@ -4,7 +4,7 @@
 
 <div id="form" class="d-flex align-items-center justify-content-center" style="background-color: #85D0B2;">
     <div id="form-card" class="p-5 bg-white rounded shadow">
-       <h2>¿Estás seguro de que quieres eliminar este grupo de contactos?</h2>
+       <h2>¿Estás seguro de que quieres eliminar este grupo de contactos? Los contactos de este grupo permanecerán en la base de datos.</h2>
     <form method="post">
         {% csrf_token %}
         <button type="submit" class="btn btn-danger" alt="Elimiar">Eliminar</button>
