--- a/meetLink/templates/meetLink/eventos/eventos.html
+++ b/meetLink/templates/meetLink/eventos/eventos.html
@@ -70,10 +70,10 @@
                     <a href="{% url 'evento_presupuesto' evento.id %}" class="btn btn-recurso btn-sm">Presupuesto</a>
                 {% endif %}
                 {% if evento.maleta %}
-                    <a href="{% url 'descargar_pdf' 'maleta' %}" class="btn btn-recurso btn-sm">Descargar Maleta</a>
+                    <a href="{% url 'descargar_pdf' 'maleta' %}" target="_blank" class="btn btn-recurso btn-sm">Descargar Maleta</a>
                 {% endif %}
                 {% if evento.todo %}
-                    <a href="{% url 'descargar_pdf' 'todo' %}" class="btn btn-recurso btn-sm">Descargar To-Do</a>
+                    <a href="{% url 'descargar_pdf' 'todo' %}" target="_blank" class="btn btn-recurso btn-sm">Descargar To-Do</a>
                 {% endif %}
                 <div class="d-flex justify-content-center gap-2 mt-3">
                     <a href="{% url 'eventos_update' evento.id %}" class="btn btn-sm btn-modificar" alt="Modificar evento">Modificar</a>
